--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "@angular/router": "^6.1.0",
     "core-js": "^2.5.4",
     "jasmine-xml-reporter": "^1.2.1",
+    "javascript-time-ago": "^1.0.32",
+    "ng-infinite-scroll": "^1.3.0",
+    "ngx-infinite-scroll": "^6.0.1",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
   },
