--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ng-infinite-scroll": "^1.3.0",
     "ngx-infinite-scroll": "^6.0.1",
     "rxjs": "~6.2.0",
+    "time-ago-pipe": "^1.3.2",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
